# terminal

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml  env_vars.db
migrations/2024-06-03-184954_create_env_vars/: down.sql  up.sql
src/: env_vars.rs  greet.rs  lib.rs  main.rs  schema.rs  websocket.rs  websocket_client.rs
tests/: env_vars_test.rs
