[package]
name = "terminal"
version = "0.1.0"
edition = "2021"

[lib]
name = "terminal"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
crossterm = "0.22.1"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16.1"
url = "2.2.2"
websocket = "0.24.0"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"  # For loading environment variables from a `.env` file
